tests/NormalTests/paczka1/fuzzy1/84625005.err
Error in line 17: cf6hEUIWVan S100 30,9
Error in line 11: HJJ5sx S592 69,7
Error in line 22: HJJ5sx S955 31,8
Error in line 32: S100 A418 70,8
Error in line 34: S100 S955 41,5
Error in line 35: S100 S592 49,7
